# file1agent

./: README.md  README_CN.md  config-example.toml  pyproject.toml
.github/workflows/: python-publish.yml  release.yml
eval/: swe_test.sh  swebench_file1.py  swebench_file1_test.py
examples/: test_file_manager.py  test_file_manager_simple.py  test_minimal.py
examples/test_repo/: main.py  main_improved.py
file1/: __init__.py  base.py  config.py  file_manager.py  file_summary.py
file1/utils/: __init__.py  vision.py  visualization.py
file1/vision/: base_vlm.py  openai_vlm.py
file1agent/: __init__.py  base.py  config.py  file_manager.py  file_summary.py
file1agent/reranker/: __init__.py  api_reranker.py  base_reranker.py
file1agent/utils/: __init__.py  base.py  file_summary.py  image_converter.py  pdf_converter.py  token_cnt.py  vision.py  visualization.py
file1agent/vision/: __init__.py  base_vlm.py  openai_vlm.py
