[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file1"
version = "0.0.1"
description = "Tired of main_fixed.py? file1 cleans up the mess from AI agents."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
authors = [
    {name = "Yuxiao Cheng", email = "cyx22@mails.tsinghua.edu.cn"}
]
keywords = ["file analysis", "Agent", "AI Agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "requests>=2.25.0",
    "numpy>=1.20.0",
    "graphviz>=0.20.0",
    "fitz>=0.0.1.dev2",
    "toml>=0.10.0",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/jarrycyx/file1"
Documentation = "https://file1.readthedocs.io/"
Repository = "https://github.com/jarrycyx/file1.git"
"Bug Tracker" = "https://github.com/jarrycyx/file1/issues"


[tool.hatch.build]
include = [
    "file1/**/*.py",
]
exclude = [
    "**/*",
    "!file1/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["file1"]
only-include = ["file1"]
